--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "sharp-cli": "^2.1.1",
-    "react-native-maps": "0.31.1"
+    "react-native-maps": "0.31.1",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
