--- a/package.json
+++ b/package.json
@@ -20,23 +20,25 @@
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-image-picker": "~13.3.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
+    "react-native-expo-cached-image": "^1.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
-    "sharp-cli": "^2.1.1",
-    "react-native-maps": "0.31.1",
-    "expo-linear-gradient": "~11.4.0"
+    "sharp-cli": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "prettier": "2.7.1"
   },
   "private": true
 }
